--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>TokenX</title>
-  <base href="/">
+  <base href="/tokenx/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
     </style>
-  <link rel="icon" href="favicon.ico">
+<link rel=”icon” type=“image/x-icon” href=“tokenx/favicon.png”>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
